[package]
name = "mlua_proc_macro"
version = "0.1.0"
edition = "2021"
description = "This crate is to be used in Matthias for creating lua tables with proc macros"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
mlua = {version = "0.9.9", features = ["vendored", "luajit"]}
quote = "1.0.36"
syn = {version = "2.0.70", features = ["full"]}
