[package]
name = "mlua_proc_macro"
version = "0.1.5"
edition = "2021"
description = "This crate is used to convert structs into lua tables with mlua"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
mlua = {version = "0.9.9", features = ["vendored", "luajit"]}
quote = "1.0.36"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
syn = {version = "2.0.70", features = ["full"]}
